data types changed due to encoding problems with analysts

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "(6953, 14)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,20 +388,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_position(array):\n",
+    "    \"get the position of the language in the most used ones. If not used, number 5 assigned\"\n",
     "    try:\n",
     "        return array[0][0][1]\n",
     "    except:\n",
-    "        return np.nan"
+    "        return 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,11 +509,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "activitats_summaries.to_csv(\"data/activitats_summaries.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajuntaments_info.to_csv(\"data/ajuntaments_info.csv\")"
    ]
   }
  ],
