changed , per ; in csv

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -1,13 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Preprocessament"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "activitats_v = pd.read_csv(\"data/activitats_valencia.csv\")\n",
     "activitats_a = pd.read_csv(\"data/activitats_alacant.csv\")\n",
     "activitats_c = pd.read_csv(\"data/activitats_castello.csv\")\n",
-    "ajuntaments_info = pd.read_csv(\"data/ajuntaments_info.csv\")"
+    "ajuntaments_info = pd.read_csv(\"data/ajuntaments_info_raw.csv\")"
    ]
   },
   {
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +101,7 @@
        "(6953, 14)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +230,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modifiquem el . per , per problemes de codificacio en els analistes\n",
+    "activitats[\"preu_mitja\"] = activitats[\"preu_mitja\"].apply(lambda num: str(num).replace(\".\", \",\"))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,13 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ratio_activitats_nhabitants\n",
     "aux = activitats_summaries.merge(ajuntaments_info[[\"ajuntament\", \"n_habitants\"]], how ='left', left_on=\"localitat\", right_on = \"ajuntament\")\n",
-    "activitats_summaries[\"ratio_activitats_nhabitants\"] = aux[\"n_activitats\"]/(aux[\"n_habitants\"]/1000)"
+    "activitats_summaries[\"ratio_activitats_nhabitants\"] = aux[\"n_activitats\"]/(aux[\"n_habitants\"]/1000)\n",
+    "activitats_summaries[\"ratio_activitats_nhabitants\"] = activitats_summaries[\"ratio_activitats_nhabitants\"].apply(lambda num: str(num).replace(\".\", \",\"))"
    ]
   },
   {
@@ -500,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
