removed index from datasets

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(6953, 14)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +151,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "index_envelliment_2021"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ajuntaments_info[\"index_envelliment_2021\"] = pd.to_numeric(ajuntaments_info[\"index_envelliment_2021\"].str.replace(\",\", \".\") )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "subv_us_valencia_2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\quimm\\AppData\\Local\\Temp/ipykernel_24504/2853699601.py:1: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  ajuntaments_info[\"subv_us_valencia_2022\"] = pd.to_numeric(ajuntaments_info[\"subv_us_valencia_2022\"].str.replace(\".\", \"\").str.replace(\"€\", \"\").str.replace(\",\", \".\") )\n"
+     ]
+    }
+   ],
+   "source": [
+    "ajuntaments_info[\"subv_us_valencia_2022\"] = pd.to_numeric(ajuntaments_info[\"subv_us_valencia_2022\"].str.replace(\".\", \"\").str.replace(\"€\", \"\").str.replace(\",\", \".\") )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**activitats**\n",
     "\n",
     "llengua_activitat"
@@ -158,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,18 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\quimm\\Anaconda3\\envs\\venv\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "activitats[\"preu_mitja\"] = activitats.preu.str.findall(r\"\\d+[,'.]?\\d*\")\n",
     "activitats[\"preu_mitja\"].loc[activitats.preu.notnull()] = activitats.loc[activitats.preu.notnull()].preu_mitja.apply(lambda x: np.mean([float(num.replace(\"'\", \".\").replace(\",\", \".\")) for num in x]))"
@@ -231,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modifiquem el . per , per problemes de codificacio en els analistes\n",
-    "activitats[\"preu_mitja\"] = activitats[\"preu_mitja\"].apply(lambda num: str(num).replace(\".\", \",\"))"
+    "#activitats[\"preu_mitja\"] = activitats[\"preu_mitja\"].apply(lambda num: str(num).replace(\".\", \",\"))"
    ]
   },
   {
@@ -249,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,14 +528,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
     "#ratio_activitats_nhabitants\n",
     "aux = activitats_summaries.merge(ajuntaments_info[[\"ajuntament\", \"n_habitants\"]], how ='left', left_on=\"localitat\", right_on = \"ajuntament\")\n",
-    "activitats_summaries[\"ratio_activitats_nhabitants\"] = aux[\"n_activitats\"]/(aux[\"n_habitants\"]/1000)\n",
-    "activitats_summaries[\"ratio_activitats_nhabitants\"] = activitats_summaries[\"ratio_activitats_nhabitants\"].apply(lambda num: str(num).replace(\".\", \",\"))"
+    "activitats_summaries[\"ratio_activitats_nhabitants\"] = aux[\"n_activitats\"]/(aux[\"n_habitants\"]/1000)"
    ]
   },
   {
@@ -514,29 +547,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "activitats.to_csv(\"data/activitats.csv\")"
+    "activitats.to_csv(\"data/activitats.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "activitats_summaries.to_csv(\"data/activitats_summaries.csv\")"
+    "activitats_summaries.to_csv(\"data/activitats_summaries.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ajuntaments_info.to_csv(\"data/ajuntaments_info.csv\")"
+    "ajuntaments_info.to_csv(\"data/ajuntaments_info.csv\", index=False)"
    ]
   }
  ],
