--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(6953, 14)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,11 +236,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
     "activitats = activitats.loc[activitats[\"localitat\"] != \"Bilingüe\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variables de text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activitats.nom_activitat=activitats.nom_activitat.str.replace(\",\", \";\")\n",
+    "activitats.nom_activitat = activitats.nom_activitat.str.replace(\"\\n\", \";\")\n",
+    "activitats.companyia = activitats.companyia.str.replace(\",\", \";\")\n",
+    "activitats.lloc = activitats.lloc.str.replace(\",\", \";\")\n",
+    "activitats.preu = activitats.preu.str.replace(\",\", \";\")"
    ]
   },
   {
@@ -255,9 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 261,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\quimm\\Anaconda3\\envs\\venv\\lib\\site-packages\\numpy\\core\\fromnumeric.py:3440: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n"
+     ]
+    }
+   ],
    "source": [
     "activitats[\"preu_mitja\"] = activitats.preu.str.findall(r\"\\d+[,'.]?\\d*\")\n",
     "activitats[\"preu_mitja\"].loc[activitats.preu.notnull()] = activitats.loc[activitats.preu.notnull()].preu_mitja.apply(lambda x: np.mean([float(num.replace(\"'\", \".\").replace(\",\", \".\")) for num in x]))"
@@ -265,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
