--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(6953, 14)"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,12 +253,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
     "activitats.nom_activitat=activitats.nom_activitat.str.replace(\",\", \";\")\n",
-    "activitats.nom_activitat = activitats.nom_activitat.str.replace(\"\\n\", \";\")\n",
+    "activitats.nom_activitat = activitats.nom_activitat.str.replace(\"\\n\", \"\")\n",
+    "activitats.nom_activitat = activitats.nom_activitat.str.replace(\"\\t\", \"\")\n",
     "activitats.companyia = activitats.companyia.str.replace(\",\", \";\")\n",
     "activitats.lloc = activitats.lloc.str.replace(\",\", \";\")\n",
     "activitats.preu = activitats.preu.str.replace(\",\", \";\")"
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
