--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "[9868 rows x 18 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "(21293, 14)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,12 +691,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ajuntaments_info[\"consulta_llengua_2025_valencia\"] = pd.to_numeric(ajuntaments_info[\"consulta_llengua_2025_valencia\"].str.replace(\"%\", \"\").str.replace(\",\", \".\"))\n",
-    "ajuntaments_info[\"consulta_llengua_2025_castella\"] = pd.to_numeric(ajuntaments_info[\"consulta_llengua_2025_castella\"].str.replace(\"%\", \"\").str.replace(\",\", \".\"))"
+    "ajuntaments_info[\"consulta_llengua_2025_valencia\"] = ajuntaments_info[\"consulta_llengua_2025_valencia\"].str.replace(\"%\", \"\")\n",
+    "ajuntaments_info[\"consulta_llengua_2025_castella\"] = ajuntaments_info[\"consulta_llengua_2025_castella\"].str.replace(\"%\", \"\")"
    ]
   },
   {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "Name: data, dtype: object"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "[7023 rows x 17 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
